<resources>
    <string name="app_name">Kursova</string>
    <string name="loginView">Уже маєте аккаунт?</string>
    <string name="signUpView">Ще немає аккаунта? Створіть його!</string>
    <string name="password">Пароль</string>
    <string name="makeProfile">Створити аккаунт</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="name">Ім\'я</string>
    <string name="title_activity_create_trail_mix">CreateTrailMix</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>